--- a/A1Shish/styles.css
+++ b/A1Shish/styles.css
@@ -48,6 +48,21 @@
 	z-index:11;
 }
 
+.searchLogo {
+	position:absolute;
+	width:100%;
+	height:100%;
+}
+
+.searchLogo img {
+	float:left;
+	height:16px;
+	position:relative;
+	top:10px;
+	left:12px;
+	z-index:11;
+}
+
 
 a {
   color: black;
