--- a/A1Shish/styles.css
+++ b/A1Shish/styles.css
@@ -41,6 +41,50 @@
         
         
 }
+.searchLogo {
+	position:absolute;
+	width:100%;
+	height:100%;
+}
+
+.searchLogo img {
+	float:left;
+	height:18px;
+	position:relative;
+	top:16px;
+	left:6px;
+	z-index:11;
+}
+
+.crossLogo {
+	position:absolute;
+	width:100%;
+	height:100%;
+}
+
+.crossLogo img {
+	float:right;
+	height:20px;
+	position:relative;
+	top:12px;
+	right:50px;
+	z-index:11;
+}
+
+.verticleLine {
+	position:absolute;
+	width:100%;
+	height:100%;
+}
+
+.verticleLine img {
+	float:right;
+	height:26px;
+	position:relative;
+	top:10px;
+	right:25px;
+	z-index:11;
+}
 
 .micLogo {
 	position:absolute;
@@ -57,21 +101,29 @@
 	z-index:11;
 }
 
-.searchLogo {
-	position:absolute;
-	width:100%;
-	height:100%;
+.button {
+  background-color:white;
+  border: none;
+  color: gray;
+  padding: 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 15px;
+  margin-left: 200px;
+  margin-top: 10px;
+  cursor: pointer;
 }
 
-.searchLogo img {
-	float:left;
-	height:16px;
-	position:relative;
-	top:16px;
-	left:6px;
-	z-index:11;
+.button2 {
+  border:none;
+  color: gray;
+  background-color: white;
+  font-size: 15px;
+  cursor: pointer;
+  padding: 5px;
+  margin-left: 20px;
 }
-
 
 a {
   color: black;
